# serde_assert

./: CHANGELOG.md  Cargo.toml  README.md  build.rs
.github/: dependabot.yml
.github/workflows/: test.yaml
src/: de.rs  lib.rs  ser.rs  token.rs
tests/: roundtrip.rs
