[package]
name = "serde_assert"
version = "0.7.1"
authors = ["Anders Evensen"]
edition = "2021"
rust-version = "1.56.0"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/Anders429/serde_assert"
description = "Testing library for serde Serialize and Deserialize implementations."
categories = ["development-tools::testing", "encoding", "no-std"]
keywords = ["serde", "testing", "serialization", "deserialization", "test"]

[dependencies]
serde = {version = "1.0.152", default-features = false, features = ["alloc"]}

[dev-dependencies]
claims = "0.7.1"
serde_bytes = "0.11.8"
serde_derive = "1.0.152"
